# xy-plot

./: Cargo.toml  LICENSE.md  README.md
data/: data.toml
src/: main.rs
src/data/: mod.rs
src/screen/: mod.rs
