[package]
name = "xy-plot"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]
